[gd_scene format=3 uid="uid://cnv5v5bn0mw7d"]

[ext_resource type="Script" uid="uid://caobrspnot0u8" path="res://Scenes/lose_screen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dbs06fd2x4iid" path="res://Fonts/fortnite.otf" id="2_488pv"]

[sub_resource type="LabelSettings" id="LabelSettings_go37l"]
font = ExtResource("2_488pv")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_nk27f"]
font_size = 34
font_color = Color(0.7194535, 2.5509298e-06, 5.7756904e-07, 1)

[node name="LoseScreen" type="Control" unique_id=174884586]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=1149372957]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="." unique_id=1192163033]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1587996314]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Panel/VBoxContainer" unique_id=1041541755]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "TIME'S UP!"
label_settings = SubResource("LabelSettings_go37l")
horizontal_alignment = 1

[node name="Message" type="Label" parent="Panel/VBoxContainer" unique_id=327711249]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "You ran out of time!"
label_settings = SubResource("LabelSettings_nk27f")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer" unique_id=1939801141]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Retry"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer" unique_id=1845872872]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Main Menu"

[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
